fix horizontal scrolling for code blocks
Fixes https://github.com/jipiboily/vocal/issues/58

--- a/vocal_theme/default/vocal/assets/stylesheets/vocal/base.sass
+++ b/vocal_theme/default/vocal/assets/stylesheets/vocal/base.sass
@@ -27,3 +27,6 @@ p, li
   line-height: 35px
   color: #5F5F5F
   text-align: justify
+
+pre code
+  overflow: auto
